# SecretAgents

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  test-x86_64-apple-darwin.spec  vite.config.js
py/: .gitignore  langchain.spec  pyoxidizer.bzl  requirements.txt  test-x86_64-apple-darwin.spec  test.py
src/: .env.template  App.jsx  main.jsx  root.jsx  styles.css  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: notMain.rs
src/components/: container.jsx  fileExplorer.jsx  leftPanel.jsx  message.jsx  messages.jsx
src/context/: FileProvider.jsx  LangchainProvider.jsx  LocalPolybaseProvider.jsx  MarkdownProvider.jsx  MessagingProvider.jsx  PushProtocolProvider.jsx  TauriProvider.jsx
src/routes/: agents.jsx  messaging.jsx  notes.jsx  settings.jsx  testFileAccess.jsx  testPythonSidecar.jsx
