[package]
name = "et"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["fs-all", "os-all", "path-all", "shell-open", "shell-sidecar"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libp2p = { version = "0.50", features = ["tcp", "dns", "async-std", "noise", "mplex", "yamux", "websocket", "ping", "macros"] }
futures = "0.3.21"
async-std = { version = "1.12.0", features = ["attributes"] }
# libp2p, futures and asyc-std are required for the libp2p example
# https://docs.rs/libp2p/0.51.3/libp2p/tutorials/ping/index.html

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
